<resources>
    <string name="app_name">Vegan Delivery</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_places">Кафе/Магазины</string>
    <string name="title_cart">Корзина</string>
    <string name="title_personal">Личное</string>
    <string name="title_stocks">Акции</string>

    <string name="cafe_name">Falafel Bro</string>
    <string name="cafe_min_order_cost">Заказ от 199 р</string>
    <string name="cafe_grade">4.8</string>
    <string name="cafe_delivery_time">45 мин</string>

    <string name="personal_title">Личный кабинет</string>
    <string name="personal_logout">Выйти</string>
    <string name="personal_profile">мой профиль</string>
    <string name="personal_favorite">любимые кафе</string>
    <string name="personal_orders">мои заказы</string>
    <string name="personal_sales">акции</string>

    <string name="basket_title">Корзина</string>
    <string name="basket_empty">Ваша корзина пуста</string>
    <string name="basket_clear">Очистить</string>
    <string name="notification_basket_clear">Очистить козину</string>

    <string name="order_flat">кв./офис</string>
    <string name="order_floor">этаж</string>
    <string name="order_porch">подъезд</string>
    <string name="order_intercom">домофон</string>
    <string name="order_comment">Комментарий</string>
    <string name="order_pay_button">Оплатить</string>
    <string name="order_total_price">Итого</string>
    <string name="order_delivery_price">Доставка</string>
    <string name="orders_title">Мои заказы</string>
    <string name="orders_update_button">Обновить заказы</string>

    <string name="favourite_title">Избранное</string>
    <string name="favourite_empty">Пока нет любимых кафе</string>

    <string name="button_save">Сохранить</string>
    <string name="edit_input_name">Фамилия Имя</string>
    <string name="edit_input_phone">Номер телефона</string>
    <string name="edit_input_email">Эл. почта</string>
    <string name="edit_person_title">Мои данные</string>
</resources>
