<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nozimy.vegandelivery.ui.place_list.PlaceListFragment"
        android:label="@string/title_places"
        tools:layout="@layout/shop_list" />

    <fragment
        android:id="@+id/navigation_basket"
        android:name="com.nozimy.vegandelivery.ui.basket.BasketFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.nozimy.vegandelivery.ui.personal.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal" />
</navigation>
