<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/place_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/place_avatar"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription="@string/cafe_name"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/cafe_default" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/place_name"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cafe_name"
                />

            <TextView
                android:id="@+id/place_delivery_time"
                style="@style/SubTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cafe_delivery_time"
                android:layout_toEndOf="@+id/place_name"
                android:layout_margin="@dimen/activity_horizontal_margin"
                 />
            <TextView
                android:id="@+id/place_grade"
                style="@style/SubTitleText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cafe_grade"
                />
            <TextView
                android:id="@+id/place_min_cost"
                style="@style/SubTitleText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cafe_min_order_cost"/>
        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>