<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="Москва, Красная площадь, 1"
            android:textColor="@color/colorGrey"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/order_flat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:layout_margin="2dp"
            android:hint="@string/order_flat"
            style="@style/SaveOrderFormAddress">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/order_porch"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:hint="@string/order_porch"
            style="@style/SaveOrderFormAddress">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/order_floor"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:hint="@string/order_floor"
            style="@style/SaveOrderFormAddress">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="3"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/order_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/order_comment"
        android:gravity="center"
        style="@style/SaveOrderFormAddress">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_margin="10dp"-->
<!--        >-->
<!--        <TextView-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight=".5"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:text="@string/order_delivery_price"-->
<!--            android:textColor="@color/colorGrey"-->
<!--            style="@style/TextAppearance.MaterialComponents.Body1"-->
<!--            />-->
<!--        <TextView-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight=".2"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="200 р"-->
<!--            android:textColor="@color/colorGrey"-->
<!--            style="@style/TextAppearance.MaterialComponents.Body1"-->
<!--            />-->
<!--    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:text="@string/order_total_price"
            android:textColor="@color/colorGrey"
            style="@style/TextAppearance.MaterialComponents.Body1"
            />
        <TextView
            android:id="@+id/total_price"
            android:layout_width="0dp"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            android:text="1200 р"
            android:textColor="@color/colorGrey"
            style="@style/TextAppearance.MaterialComponents.Body1"
            />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/order_pay_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/order_pay_button"
            />
    </RelativeLayout>

</LinearLayout>